# G-PhoCS

./: .cproject  .gitignore  .project  CMakeLists.txt  GPhoCS_Manual.odt  Installation.md  MT_README.txt  Makefile  README.md  User Guidelines.md  sample-control-file.ctl
ControlFileGenerator/: README.md
ControlFileGenerator/src/CFG/ControlFileGenerator/: ControlFileGeneratorUI.java
G-PhoCS/: Makefile
G-PhoCS/src/: AlignmentMain.c  AlignmentProcessor.c  GenealogyInPopTree.c  GenealogyInPopTree.h  LocusDataLikelihood.h  MCMCcontrol.h  PopulationTree.c  README.md  patch.c  utils.h
UI/src/CFG/ControlFileGenerator/: BSTNode.java  ControlFileGeneratorUI.form  ControlFileGeneratorUI.java  InputPanel.java  MigBandsInput.java  ModifyTreePanel.java  NewickTree.java  SpringUtilities.java  Validate.java
doc/: GPhoCS_Manual.odt
logs/: sample-data.coalStats.tsv  sample-mcmc.tsv
logs/bck/: sample-data.coalStats.bck.tsv
py/: model_compairison.py  model_comparison.html  model_comparison.ipynb  model_comparison.py
src/: AlignmentMain.c  AlignmentMain.cpp  AlignmentProcessor.c  AlignmentProcessor.cpp  AlignmentProcessor.h  AllLoci.cpp  AllLoci.h  CladePrinter.cpp  CladePrinter.h  CladeStats.cpp  CladeStats.h  CombAssertions.cpp  CombAssertions.h  CombClade.c  CombClade.h  CombDataStructures.c  CombPrinter.c  CombPrinter.cpp  CombPrinter.h  CombStats.c  CombStats.cpp  CombStats.h  CombStatsPrinter.c  CombStatsPrinter.h  DataLayer.cpp  DataLayer.h  DataLayerConstants.h  DbgErrMsg.h  DbgErrMsgEvents.h  DbgErrMsgGTreeStruct.h  DbgErrMsgIntervals.h  DbgErrMsgTraceLineages.h  Event.cpp  Event.h  EventNode.cpp  EventNode.h  EventsDAG.h  EventsGraph.cpp  EventsGraph.h  GPhoCS.c  (+62 more)
src/mcref/: CladePrinter.cpp  CladePrinter.h  CladeStats.cpp  CombAssertions.cpp  CombPrinter.cpp  CombStats.cpp  CombStats.h  HypothesisPrinter.cpp  McRefCommon.cpp  McRefCommon.h  RefMigStats.cpp  RefMigStats.h  TauBounds.cpp  TauBounds.h
tests/: measure_tau_bounds_tsv.py  test_tau_bounds_tsv.py
to_debug_w_ilan/negative_gphocs_should_be_zero/: debug_output.txt  sample-control-file.ctl
tst/: gphocsTests.c  test-control-file.ctl
